; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/arch/mips/sgi-ip22/extr_ip28-berr.c_ip28_be_handler.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/arch/mips/sgi-ip22/extr_ip28-berr.c_ip28_be_handler.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.pt_regs = type { i32 }

@count_be_is_fixup = common dso_local global i32 0, align 4
@MIPS_BE_FIXUP = common dso_local global i32 0, align 4
@count_be_handler = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.pt_regs*, i32)* @ip28_be_handler to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @ip28_be_handler(%struct.pt_regs* %0, i32 %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca %struct.pt_regs*, align 8
  %5 = alloca i32, align 4
  store %struct.pt_regs* %0, %struct.pt_regs** %4, align 8
  store i32 %1, i32* %5, align 4
  %6 = load i32, i32* %5, align 4
  %7 = icmp ne i32 %6, 0
  br i1 %7, label %8, label %13

8:                                                ; preds = %2
  %9 = load i32, i32* @count_be_is_fixup, align 4
  %10 = add nsw i32 %9, 1
  store i32 %10, i32* @count_be_is_fixup, align 4
  %11 = call i32 (...) @save_and_clear_buserr()
  %12 = load i32, i32* @MIPS_BE_FIXUP, align 4
  store i32 %12, i32* %3, align 4
  br label %18

13:                                               ; preds = %2
  %14 = load i32, i32* @count_be_handler, align 4
  %15 = add nsw i32 %14, 1
  store i32 %15, i32* @count_be_handler, align 4
  %16 = load %struct.pt_regs*, %struct.pt_regs** %4, align 8
  %17 = call i32 @ip28_be_interrupt(%struct.pt_regs* %16)
  store i32 %17, i32* %3, align 4
  br label %18

18:                                               ; preds = %13, %8
  %19 = load i32, i32* %3, align 4
  ret i32 %19
}

declare dso_local i32 @save_and_clear_buserr(...) #1

declare dso_local i32 @ip28_be_interrupt(%struct.pt_regs*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
